[package]
authors = ["jalhadi <jalhadi@me.com>"]
edition = "2018"
readme = "README.md"
name = "i2c-hello-world"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc"]
version = "0.5.0"

# this lets you use `cargo fix`!
[[bin]]
name = "i2c-hello-world"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
